Added elasticsearch support
