# library/api/api.py
@@ -2,6 +2,7 @@ from flask import Blueprint
 from flask_restful import Api
 
 from library.api.resources.book import Book, BookList
+from library.api.resources.search import Search
 from library.api.resources.user import UserList, User
 from library.api.resources.author import Author, AuthorList
 from library.api.resources.order import Order, OrderList
@@ -14,14 +15,16 @@ api = Api(api_blueprint)
 
 # register flask-restful resources
 api.add_resource(BookList, "/book")
-api.add_resource(Book, "/book/<book_id>")
+api.add_resource(Book, "/book/<int:book_id>")
 api.add_resource(UserList, "/user")
-api.add_resource(User, "/user/<user_id>")
-api.add_resource(OrderList, "/order", "/user/<user_id>/order")
-api.add_resource(Order, "/order/<order_id>", "/user/<user_id>/order/<order_id>")
+api.add_resource(User, "/user/<int:user_id>")
+api.add_resource(OrderList, "/order", "/user/<int:user_id>/order")
+api.add_resource(Order, "/order/<int:order_id>", "/user/<user_id>/order/<int:order_id>")
 api.add_resource(AuthorList, "/author")
-api.add_resource(Author, "/author/<author_id>")
+api.add_resource(Author, "/author/<int:author_id>")
 api.add_resource(PublisherList, "/publisher")
-api.add_resource(Publisher, "/publisher/<publisher_id>")
+api.add_resource(Publisher, "/publisher/<int:publisher_id>")
 api.add_resource(InventoryList, "/inventory")
-api.add_resource(Inventory, "/inventory/<inventory_id>")
+api.add_resource(Inventory, "/inventory/<int:inventory_id>")
+
+api.add_resource(Search, "/search")
